ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: example.local
    http:
      paths:
      - path: /server1
        pathType: Prefix
        backend:
          service:
            name: server1-service
            port:
              number: 80
      - path: /server2
        pathType: Prefix
        backend:
          service:
            name: server2-service
            port:
              number: 80
